--- a/ansible/picluster/main.yaml
+++ b/ansible/picluster/main.yaml
@@ -1,5 +1,7 @@
-# playbook to setup the cluster
+# playbook to setup the cluster. mostly sourced from https://fredrickb.com/2024/10/29/making-the-k3s-cluster-ha/
+
 ---
+
 - name: Setup baseline for all raspberrypi k3s nodes 
   hosts: k3s_servers, k3s_agents
   vars:
