--- a/ansible/picluster/main.yml
+++ b/ansible/picluster/main.yml
@@ -88,7 +88,7 @@
         INSTALL_K3S_VERSION: "{{ k3s_version }}"
         K3S_NODE_NAME: "{{ node_name }}"
         INSTALL_K3S_EXEC: >
-          "--disable servicelb --tls-san {{ k3s_control_plane_vip }} --cluster-init }}"
+          "--disable servicelb --tls-san {{ k3s_control_plane_vip }} --disable-traefik --cluster-init }}"
       when: not k3s.stat.exists or (reinstall | bool)
 
     - name: Read node join token
@@ -132,7 +132,7 @@
         K3S_URL: "https://{{ hostvars[groups['initial_k3s_server'][0]].ansible_default_ipv4.address }}:6443"
         K3S_NODE_NAME: "{{ node_name }}"
         # This needs to include `server` first so it does not get registered as an agent. Set the --tls-san to the VIP
-        INSTALL_K3S_EXEC: "server --disable servicelb --tls-san {{ k3s_control_plane_vip }}"
+        INSTALL_K3S_EXEC: "server --disable servicelb  --disable-traefik --tls-san {{ k3s_control_plane_vip }}"
       when: (reinstall | bool) or not k3s.stat.exists
 
 - name: Wait for all nodes to complete their registraion
@@ -150,37 +150,37 @@
       retries: 10
       delay: 10
 
-- name: Setup k3s agents
-  hosts: k3s_agents
-  tasks:
-    - name: Check if k3s is already installed
-      ansible.builtin.stat:
-        path: /usr/local/bin/k3s
-      register: k3s
+# - name: Setup k3s agents
+#   hosts: k3s_agents
+#   tasks:
+#     - name: Check if k3s is already installed
+#       ansible.builtin.stat:
+#         path: /usr/local/bin/k3s
+#       register: k3s
 
-    - name: Extract k3s server node token from control node
-      local_action:
-        module: shell
-        cmd: cat node_join_token
-      register: node_join_token
+#     - name: Extract k3s server node token from control node
+#       local_action:
+#         module: shell
+#         cmd: cat node_join_token
+#       register: node_join_token
 
-    - name: Download k3s install script
-      become: true
-      ansible.builtin.get_url:
-        url: "https://get.k3s.io"
-        dest: {{ k3s_install_script_dest }}
-        mode: '0755'
-      when: not k3s.stat.exists
+#     - name: Download k3s install script
+#       become: true
+#       ansible.builtin.get_url:
+#         url: "https://get.k3s.io"
+#         dest: {{ k3s_install_script_dest }}
+#         mode: '0755'
+#       when: not k3s.stat.exists
 
-    - name: Install k3s on agent
-      become: true
-      ansible.builtin.command: /tmp/k3s_install.sh
-      environment:
-        K3S_TOKEN: "{{ node_join_token.stdout }}"
-        # Select the first host in the group of k3s servers as the server for the agent
-        K3S_URL: "https://{{ k3s_control_plane_vip }}:6443"
-        K3S_NODE_NAME: "{{ inventory_hostname }}"
-      when: not k3s.stat.exists
+#     - name: Install k3s on agent
+#       become: true
+#       ansible.builtin.command: /tmp/k3s_install.sh
+#       environment:
+#         K3S_TOKEN: "{{ node_join_token.stdout }}"
+#         # Select the first host in the group of k3s servers as the server for the agent
+#         K3S_URL: "https://{{ k3s_control_plane_vip }}:6443"
+#         K3S_NODE_NAME: "{{ inventory_hostname }}"
+#       when: not k3s.stat.exists
     #TODO
   # - name: Copy kubectl config from server to temp .kube directory on control node 
   #   become: true
