--- a/ansible/inventory.ini
+++ b/ansible/inventory.ini
@@ -5,6 +5,7 @@ ansible_ssh_private_key_file=~/.ssh/id_ed25519
 k3s_channel=stable
 k3s_version=v1.31.4+k3s1
 k3s_install_script_dest=/usr/local/bin/k3s-install.sh
+cluster_cidr=10.42.0.0/16
 reinstall=false
 
 [initial_k3s_server]
