--- a/argocd/apps/authentik/app.yaml
+++ b/argocd/apps/authentik/app.yaml
@@ -1,39 +1,39 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: authentik
-  namespace: argocd
-  finalizers:
-  - resources-finalizer.argocd.argoproj.io
-spec:
-  destination:
-    name: in-cluster
-    namespace: authentik
-  project: default
-  source:
-    repoURL: https://charts.goauthentik.io/
-    targetRevision: '*'
-    chart: authentik
-    helm:
-      values: |
-        authentik:
-            secret_key: "PleaseGenerateASecureKey"
-            # This sends anonymous usage-data, stack traces on errors and
-            # performance data to sentry.io, and is fully opt-in
-            error_reporting:
-                enabled: true
-            postgresql:
-                password: "ThisIsNotASecurePassword"
-        server:
-            ingress:
-                # Specify kubernetes ingress controller class name
-                ingressClassName: metallb
-                enabled: false
-                hosts:
-                    - authentik.domain.tld
-        postgresql:
-            enabled: true
-            auth:
-                password: "ThisIsNotASecurePassword"
-        redis:
-            enabled: true
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: authentik
+#   namespace: argocd
+#   finalizers:
+#   - resources-finalizer.argocd.argoproj.io
+# spec:
+#   destination:
+#     name: in-cluster
+#     namespace: authentik
+#   project: default
+#   source:
+#     repoURL: https://charts.goauthentik.io/
+#     targetRevision: '*'
+#     chart: authentik
+#     helm:
+#       values: |
+#         authentik:
+#             secret_key: "PleaseGenerateASecureKey"
+#             # This sends anonymous usage-data, stack traces on errors and
+#             # performance data to sentry.io, and is fully opt-in
+#             error_reporting:
+#                 enabled: true
+#             postgresql:
+#                 password: "ThisIsNotASecurePassword"
+#         server:
+#             ingress:
+#                 # Specify kubernetes ingress controller class name
+#                 ingressClassName: metallb
+#                 enabled: false
+#                 hosts:
+#                     - authentik.domain.tld
+#         postgresql:
+#             enabled: true
+#             auth:
+#                 password: "ThisIsNotASecurePassword"
+#         redis:
+#             enabled: true
