--- a/ansible/argocd/main.yml
+++ b/ansible/argocd/main.yml
@@ -17,4 +17,25 @@
       kubernetes.core.k8s:
         state: present
         src: https://raw.githubusercontent.com/argoproj/argo-cd/stable/manifests/install.yaml
-        namespace: argocd
+        namespace: 
+
+    # - name: Patch argocd-server service to use LoadBalancer
+    #   kubernetes.core.k8s:
+    #     state: present
+    #     definition:
+    #       apiVersion: v1
+    #       kind: Service
+    #       metadata:
+    #         name: argocd-server
+    #         namespace: argocd
+    #       spec:
+    #         type: LoadBalancer
+    #         ports:
+    #           - port: 80
+    #             targetPort: 8080
+    #             protocol: TCP
+    #             name: http
+    #           - port: 443
+    #             targetPort: 8080
+    #             protocol: TCP
+    #             name: https
