--- a/argocd/apps/metallb/app.yaml
+++ b/argocd/apps/metallb/app.yaml
@@ -14,10 +14,10 @@ spec:
     repoURL: https://metallb.github.io/metallb
     targetRevision: '*'
     chart: metallb
-    helm:
-      values: |
-        frrk8s:
-          enabled: true
+    # helm:
+    #   values: |
+    #     frrk8s:
+    #       enabled: true
     # helm:
       # valueFiles:
       # - values.yaml
