--- a/argocd/core/app-set.yaml
+++ b/argocd/core/app-set.yaml
@@ -10,6 +10,12 @@ spec:
       revision: main
       directories:
       - path: argocd/apps/**
+      - path: argocd/apps/authentik
+        exclude: true
+      - path: argocd/apps/istio
+        exclude: true
+      - path: argocd/apps/bitwarden-sm
+        exclude: true
   template:
     metadata:
       name: '{{path.basename}}-app'
