--- a/argocd/apps/nfs/app.yaml
+++ b/argocd/apps/nfs/app.yaml
@@ -7,6 +7,8 @@ metadata:
     - resources-finalizer.argocd.argoproj.io
   labels:
     name: nfs-storage
+  annotations:
+    storageclass.kubernetes.io/is-default-class: "true"
 spec:
   syncPolicy:
     automated:
@@ -42,3 +44,4 @@ spec:
   destination:
     server: "https://kubernetes.default.svc"
     namespace: kube-system
+
