--- a/argocd/apps/k8s-dash/app.yaml
+++ b/argocd/apps/k8s-dash/app.yaml
@@ -20,4 +20,17 @@ spec:
     repoURL: https://kubernetes.github.io/dashboard/
     targetRevision: '*'
     chart: kubernetes-dashboard
-
+    helm:
+      valuesObject:
+        app:
+          ingress:
+            enabled: true
+            ingressClassName: nginx
+            annotations:
+              kubernetes.io/ingress.class: nginx
+              nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+              nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
+            hosts:
+              - dash.k8s.yanello.net
+            tls:
+              enabled: false
