--- a/argocd/apps/vault/app.yaml
+++ b/argocd/apps/vault/app.yaml
@@ -22,6 +22,8 @@ spec:
     chart: vault
     helm:
       valuesObject:
+        global:
+          tlsDisable: true
         server:
           ha:
             enabled: true
