--- a/argocd/apps/nvidia-device-plugin/app.yaml
+++ b/argocd/apps/nvidia-device-plugin/app.yaml
@@ -35,7 +35,7 @@ spec:
             - key: nvidia.com/gpu
               operator: Exists
               effect: NoSchedule
-            - key: node-role.kuberenetes.io/server
+            - key: node-role.kubernetes.io/server
               operator: Exists
               effect: NoSchedule
         daemonsets:
@@ -43,7 +43,7 @@ spec:
             - key: nvidia.com/gpu
               operator: Exists
               effect: NoSchedule
-            - key: node-role.kuberenetes.io/server
+            - key: node-role.kubernetes.io/server
               operator: Exists
               effect: NoSchedule
         operater:
@@ -56,6 +56,6 @@ spec:
               operator: "Equal"
               value: ""
               effect: "NoSchedule"
-            - key: node-role.kuberenetes.io/server
+            - key: node-role.kubernetes.io/server
               operator: Exists
               effect: NoSchedule
