--- a/argocd/apps/nvidia-device-plugin/app.yaml
+++ b/argocd/apps/nvidia-device-plugin/app.yaml
@@ -23,21 +23,22 @@ spec:
     helm:
       valuesObject:
         node-feature-discovery:
-          tolerations:
-            - key: "node-role.kubernetes.io/master"
-              operator: "Equal"
-              value: ""
-              effect: "NoSchedule"
-            - key: "node-role.kubernetes.io/control-plane"
-              operator: "Equal"
-              value: ""
-              effect: "NoSchedule"
-            - key: nvidia.com/gpu
-              operator: Exists
-              effect: NoSchedule
-            - key: node-role.kubernetes.io/server
-              operator: Exists
-              effect: NoSchedule
+          worker:
+            tolerations:
+              - key: "node-role.kubernetes.io/master"
+                operator: "Equal"
+                value: ""
+                effect: "NoSchedule"
+              - key: "node-role.kubernetes.io/control-plane"
+                operator: "Equal"
+                value: ""
+                effect: "NoSchedule"
+              - key: nvidia.com/gpu
+                operator: Exists
+                effect: NoSchedule
+              - key: node-role.kubernetes.io/server
+                operator: Exists
+                effect: NoSchedule
         daemonsets:
           tolerations:
             - key: nvidia.com/gpu
