--- a/argocd/apps/nvidia-device-plugin/app.yaml
+++ b/argocd/apps/nvidia-device-plugin/app.yaml
@@ -25,20 +25,9 @@ spec:
         node-feature-discovery:
           worker:
             tolerations:
-              - key: "node-role.kubernetes.io/master"
-                operator: "Equal"
-                value: ""
-                effect: "NoSchedule"
-              - key: "node-role.kubernetes.io/control-plane"
-                operator: "Equal"
-                value: ""
-                effect: "NoSchedule"
-              - key: nvidia.com/gpu
+              - key: ""
                 operator: Exists
-                effect: NoSchedule
-              - key: node-role.kubernetes.io/server
-                operator: Exists
-                effect: NoSchedule
+                effect: ""
         daemonsets:
           tolerations:
             - key: nvidia.com/gpu
