--- a/argocd/apps/nvidia-device-plugin/app.yaml
+++ b/argocd/apps/nvidia-device-plugin/app.yaml
@@ -22,6 +22,7 @@ spec:
     chart: gpu-operator
     helm:
       valuesObject:
+        dcgmExporter.enabled: false
         node-feature-discovery:
           worker:
             tolerations:
@@ -36,16 +37,4 @@ spec:
             - key: node-role.kubernetes.io/server
               operator: Exists
               effect: NoSchedule
-        operator:
-          tolerations:
-            - key: "node-role.kubernetes.io/master"
-              operator: "Equal"
-              value: ""
-              effect: "NoSchedule"
-            - key: "node-role.kubernetes.io/control-plane"
-              operator: "Equal"
-              value: ""
-              effect: "NoSchedule"
-            - key: node-role.kubernetes.io/server
-              operator: Exists
-              effect: NoSchedule
+
