--- a/argocd/apps/vault/app.yaml
+++ b/argocd/apps/vault/app.yaml
@@ -28,11 +28,33 @@ spec:
           ha:
             enabled: true
             replicas: 3
+            raft:
+              enabled: true
+              setNodeId: true
+              config: |
+                ui = true
+                listener "tcp" {
+                  address = "[::]:8200"
+                  cluster_address = "[::]:8201"
+                }
+                storage "raft" {
+                  path = "/vault/data"
+                  retry_join {
+                    leader_api_addr = "http://vault-0.vault-internal:8200"
+                  }
+                  retry_join {
+                    leader_api_addr = "http://vault-1.vault-internal:8200"
+                  }
+                  retry_join {
+                    leader_api_addr = "http://vault-2.vault-internal:8200"
+                  }
+                }
+                
           standalone.enabled: false
           serviceAccount.create: true
-          dataStorage:
-            enabled: true
-            size: 10Gi
-            storageClass: nfs-storage
+          # dataStorage:
+          #   enabled: true
+          #   size: 10Gi
+          #   storageClass: nfs-storage
           dev.enabled: false
           
