--- a/argocd/apps/vault/app.yaml
+++ b/argocd/apps/vault/app.yaml
@@ -23,7 +23,7 @@ spec:
     helm:
       valuesObject:
         global:
-          tlsDisable: false
+          tlsDisable: true
         server:
           ha:
             enabled: true
@@ -36,6 +36,7 @@ spec:
                 listener "tcp" {
                   address = "[::]:8200"
                   cluster_address = "[::]:8201"
+                  tls_disable = 1
                 }
                 storage "raft" {
                   path = "/vault/data"
