--- a/argocd/apps/authentik/secret.enc.yaml
+++ b/argocd/apps/authentik/secret.enc.yaml
@@ -4,10 +4,8 @@ metadata:
     name: authentik-secrets
 type: Opaque
 data:
-    authentik:
-        secret_key: ENC[AES256_GCM,data:EBDn6JNZgn39xsKMDiOcXyhuWkwG9289X/eP1e2xg9Qxr0P+PMqxotYMFJnbzOMUHv37/3H40zciNZWlSxXxU20yNTy6nvVeHqmvB1F+GG0=,iv:SySTys5ADfZZEvCrL32QV8rvwf3BJHd1foMGXVS4P7s=,tag:V13ezzC8KtTfVXh/rlDVIw==,type:str]
-        posgresql.password: ENC[AES256_GCM,data:SGIZ8eVLALS5lugsk3mJRH3x94DkBLonjpTLI/dncaWa2Cme04OVy9HO61/ZYZW4nukpO/mmoYQLni+WBo47MAszBa/+pQXcOGY3utH7TlI=,iv:LYhxvnn6IwlifIikvwhJXJZ+cgrhH/1maerq2mdYulk=,tag:rGx1TylOJVwgZuxWEcin9w==,type:str]
-    posgresql.auth.password: ENC[AES256_GCM,data:JgJkypWPsdBVxAFosPclvtinsCP8a1hv+T7gMUnKULITTT8ceypodVVrz0menQilMIqElUEP9sB3orxMomnDvW9rma5qS1POgM4K5gG2Bu8=,iv:9gqDmofDQR1tJOpxwESusQ+R4nExRXnWiLiIcGneXe8=,tag:ej2Iw+AOy4DgHdokMbqNlA==,type:str]
+    secret_key: ENC[AES256_GCM,data:fFz76bSKfQEp/KqXYWcoPZetJKfgSh0UiQt/Ofef1qhwMTK5Lfnt3c9lnIazh8YLPxMK7Qg1t+7/XTDqPEOsQiX/AuoKChsYJ+GG2xhItZQ=,iv:6FK9K1QCDMHE1IQJm+N0pXk2ohL+NzfZywtiiYxyITI=,tag:wh7SMVHMzFisBrIdLObtBQ==,type:str]
+    posgresql_password: ENC[AES256_GCM,data:qav9rIRF84Ag7LpP6nQP0+fC/b4cB68ZyAXQwb0ZubPY1ZCZ1zFaiP4rcwQt3BTZZDHkIAXcN25l2twW/b1In2h7Z54reRLBNVthNbIi5b8=,iv:GJLxoB6eQr6lx2+AUvlIr7SLm8vhlUqQhDZ7ofg+5Gc=,tag:dYW7aDKdZitpGj1KUNxWaw==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -23,8 +21,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T21:25:10Z"
-    mac: ENC[AES256_GCM,data:g5bGwgSuCjvLuE4AdynR7jKFFhUQMy1xZt1M5xuoFwscBJ3YQDxteuKejlB02GSGssMLSx8We2AcRCe0R6CzAwHW/2dHdpH9x+GoORaW+rr36ELzicI7+OUvgatEuNuLPhe0PxbZCQlvrm2OmXIZx2t390yJmNuCBf1iUKWDtgU=,iv:I1UcFoqdqFt3EyP7Dh6D/NxJ7rq61EXGHdPIwsfE3Nw=,tag:scss6gbLRCbpnGJSLKGLkQ==,type:str]
+    lastmodified: "2025-01-19T22:06:35Z"
+    mac: ENC[AES256_GCM,data:beuZfZ0c3VBqgpLkc/eXvtltifhYK7XLE8SljZHORCk7EbpKVtyWBAqt/Mj1axZgSV8dBpTJo+q+OPIWlMl9zJ3zRuZfqr5DlQ3sPA47qM0AKrq9dynw6FM7j9ojRnxqyV/qryEUvrQcp9u570+yAe1Xm+vHcjAQ1oSGwBFzC70=,iv:c98HvaJPxAUNFaz0QCG22JsvaKE54RHUSDMy2zpsy3Q=,tag:64o9P8b8RH8rxIz7tNG6rQ==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
