--- a/argocd/apps/authentik/secret.enc.yaml
+++ b/argocd/apps/authentik/secret.enc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Secret
 metadata:
     name: authentik-secrets
+    namespace: authentik
 type: Opaque
 data:
     secret_key: ENC[AES256_GCM,data:fFz76bSKfQEp/KqXYWcoPZetJKfgSh0UiQt/Ofef1qhwMTK5Lfnt3c9lnIazh8YLPxMK7Qg1t+7/XTDqPEOsQiX/AuoKChsYJ+GG2xhItZQ=,iv:6FK9K1QCDMHE1IQJm+N0pXk2ohL+NzfZywtiiYxyITI=,tag:wh7SMVHMzFisBrIdLObtBQ==,type:str]
@@ -21,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T22:06:35Z"
-    mac: ENC[AES256_GCM,data:beuZfZ0c3VBqgpLkc/eXvtltifhYK7XLE8SljZHORCk7EbpKVtyWBAqt/Mj1axZgSV8dBpTJo+q+OPIWlMl9zJ3zRuZfqr5DlQ3sPA47qM0AKrq9dynw6FM7j9ojRnxqyV/qryEUvrQcp9u570+yAe1Xm+vHcjAQ1oSGwBFzC70=,iv:c98HvaJPxAUNFaz0QCG22JsvaKE54RHUSDMy2zpsy3Q=,tag:64o9P8b8RH8rxIz7tNG6rQ==,type:str]
+    lastmodified: "2025-01-19T22:08:18Z"
+    mac: ENC[AES256_GCM,data:V4NkkTM77t6VwvMgwGfAMAqAKdzcRF7muRghn7jwEtRgE5Agb9maBEr25jXBq+k29EWd1vfBK6i22ys+pn4gu67eAFGZE2DVzf9SvbJcocJIPHJxKozd588r2j+KmPRj52t9SJY+GjOYoYgMnVQ+oLldrIrtA6tySnl5pLRKfuU=,iv:uaTAv+Ml93jk6MqTmEpo5L36iqIil8EqRdmQwce6hvY=,tag:tc9Xkq9km5WnOMA43NYSPA==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
