--- a/argocd/apps/authentik/secret.enc.yaml
+++ b/argocd/apps/authentik/secret.enc.yaml
@@ -5,8 +5,8 @@ metadata:
     namespace: authentik
 type: Opaque
 data:
-    secret_key: ENC[AES256_GCM,data:fFz76bSKfQEp/KqXYWcoPZetJKfgSh0UiQt/Ofef1qhwMTK5Lfnt3c9lnIazh8YLPxMK7Qg1t+7/XTDqPEOsQiX/AuoKChsYJ+GG2xhItZQ=,iv:6FK9K1QCDMHE1IQJm+N0pXk2ohL+NzfZywtiiYxyITI=,tag:wh7SMVHMzFisBrIdLObtBQ==,type:str]
-    posgresql_password: ENC[AES256_GCM,data:qav9rIRF84Ag7LpP6nQP0+fC/b4cB68ZyAXQwb0ZubPY1ZCZ1zFaiP4rcwQt3BTZZDHkIAXcN25l2twW/b1In2h7Z54reRLBNVthNbIi5b8=,iv:GJLxoB6eQr6lx2+AUvlIr7SLm8vhlUqQhDZ7ofg+5Gc=,tag:dYW7aDKdZitpGj1KUNxWaw==,type:str]
+    AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:dWFWI+IgtPRt9e9kGo3BASZxUNpmKDVj9nrws+uPcgWUAjXiwqNh1+pB/x0gf4X1YgwPHFV2f/QJ9sRDnDra5vUgShUYFPRsaNHMJ9IU8i8=,iv:aT3RQLG79Bzm7+8Bgmu/UGkQe36JNbF9FpdCD+fhM0Q=,tag:seukwJyMAJ6v3ODtzGO8PA==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:0SlX6Mx1twflYW1v6GOP3E1Zm8o9SHXEuzxqleafZHV0WYFSa0kVLsMEa94C4Hot0W6UCylMnWiUdtDDTUHZsG+BMzT2np1oxCutZHAAl48=,iv:1iIhpTag7QU7V4mR7U4VztlhA0z+qN65ZPMN0+/P3Rw=,tag:EzsKwB8oZDATMeJ2o0tGRg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T22:08:18Z"
-    mac: ENC[AES256_GCM,data:V4NkkTM77t6VwvMgwGfAMAqAKdzcRF7muRghn7jwEtRgE5Agb9maBEr25jXBq+k29EWd1vfBK6i22ys+pn4gu67eAFGZE2DVzf9SvbJcocJIPHJxKozd588r2j+KmPRj52t9SJY+GjOYoYgMnVQ+oLldrIrtA6tySnl5pLRKfuU=,iv:uaTAv+Ml93jk6MqTmEpo5L36iqIil8EqRdmQwce6hvY=,tag:tc9Xkq9km5WnOMA43NYSPA==,type:str]
+    lastmodified: "2025-01-19T22:37:39Z"
+    mac: ENC[AES256_GCM,data:buRIBbLwF7PDGsX51omYEJYuHN9A9iukZXn0ncbTBkWk5qHwfkC1cl7/nCAFx3lJsGYSySIZlqZdJ5GXgqlD2jDvf+mIbgvcAZT3aNhJx1Xq5a6X/CnYbOv1kTmz3nigLYnG3NDWUMuOf/LT3UnYaqSSUF/4RBNkwLlA4RcArNw=,iv:uZn8w3u78Y3TmvnVUv+dOH4jKuGQ4paEKLBmXUlzuYk=,tag:ePgjn/NB5Db+a1gk1W2BSw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
