--- a/argocd/apps/authentik/app.yaml
+++ b/argocd/apps/authentik/app.yaml
@@ -17,36 +17,19 @@ spec:
     helm:
       valuesObject:
         authentik:
-            # secret_key: ${authentik.secret_key}
-            # This sends anonymous usage-data, stack traces on errors and
-            # performance data to sentry.io, and is fully opt-in
             error_reporting:
                 enabled: true
-            # postgresql:
-            #     password: ${authentik.posgresql_password}
         server:
+            envFrom:
+              - secretRef:
+                  name: authentik-secrets
             ingress:
                 # Specify kubernetes ingress controller class name
-                ingressClassName: metallb
-                enabled: false
+                ingressClassName: nginx
+                enabled: true
                 hosts:
-                    - authentik.domain.tld
+                    - authentik.k8s.yanello.net
         postgresql:
             enabled: true
-            # auth:
-            #     password: ${authentik.posgresql_password}
         redis:
             enabled: true
-      valuesFrom:
-        - kind: Secret
-          name: authentik-secrets
-          valuesKey: secret_key
-          targetPath: authentik.secret_key
-        - kind: Secret
-          name: authentik-secrets
-          valuesKey: postgresql_password
-          targetPath: authentik.postgresql.password
-        - kind: Secret
-          name: authentik-secrets
-          valuesKey: posgresql_password
-          targetPath: authentik.postgresql.auth.password
