--- a/argocd/apps/authentik/app.yaml
+++ b/argocd/apps/authentik/app.yaml
@@ -10,7 +10,7 @@ spec:
   project: default
   source:
     path: homelab/argocd/apps/authentik/secrets
-    repoURL: git@github.com:myanello/homelab.git
+    repoURL: https://github.com/myanello/homelab.git
     targetRevision: HEAD
 ---
 apiVersion: argoproj.io/v1alpha1
