--- a/argocd/apps/authentik/secrets/secret.enc.yaml
+++ b/argocd/apps/authentik/secrets/secret.enc.yaml
@@ -4,9 +4,9 @@ metadata:
     name: authentik-secrets
     namespace: authentik
 type: Opaque
-data:
-    AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:dWFWI+IgtPRt9e9kGo3BASZxUNpmKDVj9nrws+uPcgWUAjXiwqNh1+pB/x0gf4X1YgwPHFV2f/QJ9sRDnDra5vUgShUYFPRsaNHMJ9IU8i8=,iv:aT3RQLG79Bzm7+8Bgmu/UGkQe36JNbF9FpdCD+fhM0Q=,tag:seukwJyMAJ6v3ODtzGO8PA==,type:str]
-    POSTGRES_PASSWORD: ENC[AES256_GCM,data:0SlX6Mx1twflYW1v6GOP3E1Zm8o9SHXEuzxqleafZHV0WYFSa0kVLsMEa94C4Hot0W6UCylMnWiUdtDDTUHZsG+BMzT2np1oxCutZHAAl48=,iv:1iIhpTag7QU7V4mR7U4VztlhA0z+qN65ZPMN0+/P3Rw=,tag:EzsKwB8oZDATMeJ2o0tGRg==,type:str]
+stringData:
+    AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:V4UrUt73KRVaNzPAFiiDA7BqMwzEzDVMBXmC9gzIVtY5lWVyGTsN+mewoE8UDK0dRiBifgDlm4hg6+itEB7ijGyX1Y3PPsujDFTLlfK2lZI=,iv:89ilXephk+OzEqpSs6qULHbTT9+Jl7XSDLMfFRZolj0=,tag:ylMiF+f36HgZG4Ec7tDnVQ==,type:str]
+    POSTGRES_PASSWORD: ENC[AES256_GCM,data:71eippNvXbcVJS7gSjo0NaJv83axf6zjxIDuRLmRE2/Bwea5PLFRq5dGxsxQuDHb0Ui9/+9GShoDOPwXlo8QkEy0xGxlTRnxv0o77/9aH4Y=,iv:8KgSdlxFX8SAbs8tz8jy3yUuPlmqIXHTcCZ4K4Lifd4=,tag:XIWPBjkY2Avz9lz7kWZcgQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +22,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T22:37:39Z"
-    mac: ENC[AES256_GCM,data:buRIBbLwF7PDGsX51omYEJYuHN9A9iukZXn0ncbTBkWk5qHwfkC1cl7/nCAFx3lJsGYSySIZlqZdJ5GXgqlD2jDvf+mIbgvcAZT3aNhJx1Xq5a6X/CnYbOv1kTmz3nigLYnG3NDWUMuOf/LT3UnYaqSSUF/4RBNkwLlA4RcArNw=,iv:uZn8w3u78Y3TmvnVUv+dOH4jKuGQ4paEKLBmXUlzuYk=,tag:ePgjn/NB5Db+a1gk1W2BSw==,type:str]
+    lastmodified: "2025-01-19T22:51:35Z"
+    mac: ENC[AES256_GCM,data:QQrxmyRSqvzxwCinCQfZTE/wZMXI+b2tzjBOGleclUjrkEgKJa5zVhXBw2/WaEarxb4FzmtvMyBkGOktxNt6Ifp8d07o1GqXABVvvCwRmpyZSiTzWHdaBsbSPLKpbSJXfBPPsU79yvFco2nCeTFuQK64zjQGV3r3knSfGFgP1rU=,iv:HDk0WMgzIBYs2Wi/UUSG4thoyoFXvW1rhH9ErThNt0c=,tag:OQpolF+IyEYjcWFMNbEUtg==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
