--- a/argocd/apps/authentik/secrets/secret.enc.yaml
+++ b/argocd/apps/authentik/secrets/secret.enc.yaml
@@ -7,6 +7,10 @@ type: Opaque
 stringData:
     AUTHENTIK_SECRET_KEY: ENC[AES256_GCM,data:V4UrUt73KRVaNzPAFiiDA7BqMwzEzDVMBXmC9gzIVtY5lWVyGTsN+mewoE8UDK0dRiBifgDlm4hg6+itEB7ijGyX1Y3PPsujDFTLlfK2lZI=,iv:89ilXephk+OzEqpSs6qULHbTT9+Jl7XSDLMfFRZolj0=,tag:ylMiF+f36HgZG4Ec7tDnVQ==,type:str]
     POSTGRES_PASSWORD: ENC[AES256_GCM,data:71eippNvXbcVJS7gSjo0NaJv83axf6zjxIDuRLmRE2/Bwea5PLFRq5dGxsxQuDHb0Ui9/+9GShoDOPwXlo8QkEy0xGxlTRnxv0o77/9aH4Y=,iv:8KgSdlxFX8SAbs8tz8jy3yUuPlmqIXHTcCZ4K4Lifd4=,tag:XIWPBjkY2Avz9lz7kWZcgQ==,type:str]
+    AUTHENTIK_POSTGRESQL__PASSWORD: ENC[AES256_GCM,data:AVuD4VEnenAAtkk5TNesu85fW5wYZocH7tzaAGVvkkUIGxSxw1Z8dYzRjWJbk1LhhLCkSFsbppAFso047h8cPWEs8mvnp8u/mPYoLdg66Ow=,iv:wA+6attJDziY/fRB+gNExSLGTQ8V2PkLQcwXkQd9Guc=,tag:pZPLc003MdmKgzUiX3Rplw==,type:str]
+    AUTHENTIK_POSTGRESQL__HOST: ENC[AES256_GCM,data:h+8uk6ppsqDkeL3n1XuC9d73Pew=,iv:zwefQQU/N6208UPY603P9EK1yVqesz0J+GMOFZq4KaA=,tag:rvOWNNsfys+OwvR7cZRsnQ==,type:str]
+    AUTHENTIK_POSTGRESQL__NAME: ENC[AES256_GCM,data:h1Y4sIPnAW9W,iv:sOi2YrL+wGHmD7oU/DFZu4nIWnO5SRmv7QYvVJ0LBJQ=,tag:YzFIbmFU+TLdgN5+4ksmFw==,type:str]
+    AUTHENTIK_POSTGRESQL__USER: ENC[AES256_GCM,data:k1ariTsf+JtB,iv:0+wz74LXpOQtt3uovGiGzioGjjZw0g3cXZzbWxvTk5Y=,tag:uWL4ufalJDOxXtTFw8/4Zg==,type:str]
 sops:
     kms: []
     gcp_kms: []
@@ -22,8 +26,8 @@ sops:
             NE40enY1a3NZbVljYmpyNDRFSUZ5RTAKZZhEGkeVjJNT+kbv7xyxePum1RfP1OUw
             +RgCoroHJyrxhmPCmoG09BcR4GhWK6pvkXel+qronUrgHNq2BRydag==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T22:51:35Z"
-    mac: ENC[AES256_GCM,data:QQrxmyRSqvzxwCinCQfZTE/wZMXI+b2tzjBOGleclUjrkEgKJa5zVhXBw2/WaEarxb4FzmtvMyBkGOktxNt6Ifp8d07o1GqXABVvvCwRmpyZSiTzWHdaBsbSPLKpbSJXfBPPsU79yvFco2nCeTFuQK64zjQGV3r3knSfGFgP1rU=,iv:HDk0WMgzIBYs2Wi/UUSG4thoyoFXvW1rhH9ErThNt0c=,tag:OQpolF+IyEYjcWFMNbEUtg==,type:str]
+    lastmodified: "2025-01-19T22:59:28Z"
+    mac: ENC[AES256_GCM,data:qce5sz41qtjroHCBw2EeB4RqRrHHsVQI8yDnHEwj+05s0eULunIQ2cEeX9j6p3yqYBmBO0gjB9In/2KWmxOrGiXYGFvq0DWTFBEhFd4eVbGTipQrZaJXo/3GXhfE8SNSs9MB5JWEJyX4RcRyKEc8EJWOgmC4Frz3qarMKnQKd14=,iv:/SyYKkajViIuiK9T2F55XpzOY1L3Cbdsgqqv2ejM3TU=,tag:PWZPVI/R8jFFg3gdPglmLw==,type:str]
     pgp: []
     unencrypted_regex: ^(apiVersion|metadata|kind|type)$
     version: 3.9.1
